--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,3 +87,51 @@ height:200px;
   );
   background-size: 65px 65px;
 }
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background: #00E3E5;
+  padding: 20px;
+  border: 1px solid #E600A1;
+  border-radius: 10px;
+  color: #E6C200;
+  text-align: center;
+  font-size: 20px;
+  width: 450px;
+  height: 250px;
+}
+
+.form input {
+  height: 35px;
+  outline: none;
+  border: 2px solid orange;
+  background: transparent;
+  padding: 20px 10px;
+  border-radius: 5px;
+  transition: 0.5s;
+  color: white;
+  font-size: 20px;
+}
+
+.form input:focus {
+  background: orange;
+}
+
+.form button {
+  width: 100%;
+  color: white;
+  transition: 0.5s;
+  font-size: 20px;
+  outline: none;
+  border: none;
+  height: 45px;
+  border-radius: 5px;
+  background: orange;
+  align-self: flex-end;
+}
