--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,17 +76,6 @@ height:200px;
   box-shadow: 15px 15px 30px rgb(25, 25, 25), -15px -15px 30px rgb(60, 60, 60);
 }
 
-.container {
-  width: 100vw;
-  height: 100vh;
-  /* Add your background pattern here */
-  background-image: repeating-radial-gradient(
-    #0c0a0a 80%,
-    #2f312f 90%,
-    #3f4549 90%
-  );
-  background-size: 65px 65px;
-}
 .center {
   display: flex;
   justify-content: center;
@@ -96,11 +85,11 @@ height:200px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background: #00E3E5;
+  background: #00e3e5;
   padding: 20px;
-  border: 1px solid #E600A1;
+  border: 1px solid #e600a1;
   border-radius: 10px;
-  color: #E6C200;
+  color: #e6c200;
   text-align: center;
   font-size: 20px;
   width: 450px;
@@ -134,4 +123,82 @@ height:200px;
   border-radius: 5px;
   background: orange;
   align-self: flex-end;
+}
+.card-1 {
+  position: relative;
+  width: 190px;
+  height: 254px;
+  color: #fff;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.card-1:hover {
+  transform: translateY(-20px);
+}
+
+.card-1::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(45deg, #ffbc00, #ff0058);
+  border-radius: 1.2em;
+}
+
+.card-1::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #ffbc00, #ff0058);
+  filter: blur(30px);
+}
+
+.card-1 span {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  border-radius: 1em;
+}
+
+.card-1 span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.card-1 .content {
+  position: relative;
+  padding: 10px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  font-size: 1.5em;
+}
+
+.glass-t {
+  /* From https://css.glass */
+  background: rgba(32, 180, 243, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
