--- a/templates/tome1/index.html.twig
+++ b/templates/tome1/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SoifDeSangController!{% endblock %}
+{% block title %}Hello Tome1Controller!{% endblock %}
 
 {% block body %}
     <div id="root"></div>
