--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,3 +202,6 @@ height:200px;
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
+.brown-banner{
+ background-color: #635237; 
+}
